# Peripherals

./: .gitignore  CMakeLists.txt  build_and_run.sh  main.cpp
example/MPU9250/: CMakeLists.txt  build_and_run.sh  main.cpp
example/serial/: CMakeLists.txt  build_and_run.sh  main.cpp
example/serial/Arduino/: arduino.ino
include/: BSC.h  GPIO.h  MiniSerial.h  Peripherals.h  Serial.h
src/: BSC.cpp  GPIO.cpp  MiniSerial.cpp  Peripherals.cpp  Serial.cpp  main.cpp
